--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -11,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Daniel Solarte Chaverra || Portfolio</title>
+    <title>Elmer Gustavo Pú || Portfolio</title>
 
     <meta name="description" content="Cross-platform software developer, if you want to hire a software developer look my profile clicking here.">
     <meta name="keywords" content="Daniel Solarte Chaverra, Developer, ReactJS, TypeScript, JavaScript, js, programmer, software, NodeJS, Deno, Rust, Go, Ionic, Figma, danielsolartech, 100DaysOfCode, portfolio, it, technology, service workers, pwa, ts, react">
@@ -27,17 +28,19 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@danielsolartech">
     <meta name="twitter:creator" content="@danielsolartech">
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="root">
-      <div style="display: flex;flex-flow: column wrap;align-items: center;justify-content: center;height: 100vh;font-family: Arial;">
-        <h1 style="color: #009688;font-size: 1.25rem;letter-spacing: .02em;margin: 0;padding: 0;text-align: center;">
-          Daniel Solarte Chaverra | Portfolio
-        </h1>
-        <span style="letter-spacing: .02em;display: block;margin-top: .25rem;text-align: center;">
+        <div style="display: flex;flex-flow: column wrap;align-items: center;justify-content: center;height: 100vh;font-family: Arial;">
+            <h1 style="color: #009688;font-size: 1.25rem;letter-spacing: .02em;margin: 0;padding: 0;text-align: center;">
+                Elmer Gustavo Pú | Portfolio
+            </h1>
+            <span style="letter-spacing: .02em;display: block;margin-top: .25rem;text-align: center;">
           Software Developer
         </span>
-      </div>
+        </div>
     </div>
-  </body>
+</body>
+
 </html>
