--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
 
     <!-- Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://danielsolartech.github.io">
-    <meta property="og:title" content="Daniel Solarte Chaverra | Portfolio">
+    <meta property="og:url" content="https://elmergustavo.github.io/portafolio">
+    <meta property="og:title" content="Elmer Gustavo Pú | Portfolio">
     <meta property="og:description" content="Cross-platform software developer, if you want to hire a software developer look my profile clicking here.">
-    <meta property="og:image" content="https://danielsolartech.github.io/avatar.png">
+    <meta property="og:image" content="https://github.com/elmergustavo/portafolio/blob/master/portada.PNG">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
