--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://elmergustavo.github.io/portafolio">
     <meta property="og:title" content="Elmer Gustavo Pú | Portfolio">
-    <meta property="og:description" content="Cross-platform software developer, if you want to hire a software developer look my profile clicking here.">
+    <meta property="og:description" content="Portafolio, soy estudiante de la universidad Rafael Landívar.">
     <meta property="og:image" content="https://github.com/elmergustavo/portafolio/blob/master/portada.PNG">
 
     <!-- Twitter -->
