--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
     <meta name="theme-color" content="#009688" />
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/avatar.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Elmer Gustavo Pú || Portfolio</title>
 
-    <meta name="description" content="Cross-platform software developer, if you want to hire a software developer look my profile clicking here.">
-    <meta name="keywords" content="Daniel Solarte Chaverra, Developer, ReactJS, TypeScript, JavaScript, js, programmer, software, NodeJS, Deno, Rust, Go, Ionic, Figma, danielsolartech, 100DaysOfCode, portfolio, it, technology, service workers, pwa, ts, react">
+    <meta name="description" content="Soy estudiante de la universidad Rafael Landivar">
+    <meta name="keywords" content="Elmer Gustavo Pú, Developer, ReactJS, TypeScript, JavaScript, js, programmer, software, NodeJS, Deno, Rust, Go, Ionic, Figma, danielsolartech, 100DaysOfCode, portfolio, it, technology, service workers, pwa, ts, react">
 
     <!-- Facebook -->
     <meta property="og:type" content="website">
