Nuevo proyecto barberos dormilones

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@danielsolartech">
-    <meta name="twitter:creator" content="@danielsolartech">
+    <meta name="twitter:site" content="@elmergustavo79">
+    <meta name="twitter:creator" content="@elmergustavo79">
 </head>
 
 <body>
