--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://elmergustavo.github.io/">
     <meta property="og:title" content="Elmer Gustavo Pú | Portfolio">
     <meta property="og:description" content="Portafolio, soy estudiante de la universidad Rafael Landívar.">
-    <meta property="og:image" content="https://github.com/elmergustavo/portafolio/blob/master/portada.PNG">
+    <meta property="og:image" content="https://github.com/elmergustavo/elmergustavo.github.io/blob/master/public/avatar.png>
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
