--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,12 @@
     <title>Elmer Gustavo Pú || Portfolio</title>
 
     <meta name="description" content="Soy estudiante de la universidad Rafael Landivar">
-    <meta name="keywords" content="Elmer Gustavo Pú, Developer, ReactJS, TypeScript, JavaScript, js, programmer, software, NodeJS, Deno, Rust, Go, Ionic, Figma, danielsolartech, 100DaysOfCode, portfolio, it, technology, service workers, pwa, ts, react">
+    <meta name="keywords" content="Elmer Gustavo Pú, Developer">
 
     <!-- Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://elmergustavo.github.io/">
-    <meta property="og:title" content="Elmer Gustavo Pú | Portfolio">
+    <meta property="og:title" content="Elmer Gustavo Pú | Portafolio">
     <meta property="og:description" content="Portafolio, soy estudiante de la universidad Rafael Landívar.">
     <meta property="og:image" content="https://elmergustavo.github.io/avatar.png">
 
